# EverySync-Hardware-Suite

./: .gitignore  README.md  connect.sh  cook_bag.sh  every_sync.sh  init_cam.sh  mynote.md  new_record.sh  ouster.sh  record.sh  reset.sh  usable_topic.md
EverySync_PCB/Examples/: 0531_battery_cont.SLDPRT  0531_pc_content.SLDPRT  3D_sync_ext_board.SLDPRT  LiDAR_asm.SLDASM  LiDAR_board.SLDPRT  battery6s.SLDPRT  battery_cont.SLDPRT  camera.SLDPRT  handheld_base.SLDPRT  nuc.SLDPRT  ouster.step.SLDPRT  pc_content.SLDPRT  screenhold.SLDPRT  smooth_handle.SLDPRT  support_v0731.SLDPRT  upboard.SLDPRT  柱3×35.SLDPRT  柱3×5.SLDPRT  柱3×70.SLDPRT  柱3×8.SLDPRT
EverySync_PCB/PCB/EverySync_AD/: 1_01 MCU.SchDoc.schdoc  2_02 Peripherals.SchDoc.schdoc  3_03 Power.SchDoc.schdoc  EverySyncBoard.PcbDoc.pcbdoc  EverySync_AD.PrjPcb  EverySync_AD.PrjPcbStructure
shfiles/: bag_remake.py  connect.sh  ouster.md  remake_bag.py
src/driver/HIKROBOT-MVS-CAMERA-ROS/: CMakeLists.txt  DOCX 文档.docx  package.xml
src/driver/HIKROBOT-MVS-CAMERA-ROS/config/: camera.yaml
src/driver/HIKROBOT-MVS-CAMERA-ROS/src/: hikrobot_camera.cpp  hikrobot_camera_nodelet.cpp
src/driver/hikrobot_camera/include/: hikrobot_camera.hpp
src/driver/ouster-ros/config/: viz.rviz
src/driver/ouster-ros/launch/: ouster32.launch
src/driver/pylon-ros-camera_nodelet/dragandbot_common/dnb_msgs/: CMakeLists.txt  package.xml
src/driver/pylon-ros-camera_nodelet/pylon_camera/: CMakeLists.txt  nodelet_plugins.xml  package.xml  package.xml.bak
src/driver/pylon-ros-camera_nodelet/pylon_camera/config/: baslerac1920.yaml  default.yaml
src/driver/pylon-ros-camera_nodelet/pylon_camera/launch/: nodelet_pylon.launch  pylon_basler1920_node.launch  (+1 more)
src/every_sync/: mynote.md
src/every_sync/every_sync/: CMakeLists.txt  nodelet_plugin.xml  package.xml
src/every_sync/every_sync/include/every_sync/: synchronizer.h
src/every_sync/every_sync/launch/: connect_board.launch  imu_receiver.launch  pps_test.launch  real_start_basler_xsens.launch
src/every_sync/every_sync/src/: imu_receiver.cpp  synchronizer.cpp  synchronizer_node.cpp  synchronizer_nodelet.cpp
src/every_sync/firmware/everysync/: everysync.ino
src/every_sync/scripts/: real_calculate_img_delay.py
src/utils/ext_clk_msgs/: CMakeLists.txt  package.xml
src/utils/ext_clk_msgs/msg/: GnssNumbered.msg
src/utils/imu_numbered_msgs/: CMakeLists.txt  package.xml
src/utils/imu_numbered_msgs/msg/: ImuNumbered.msg
src/versavis/firmware/: VIEW.CPP  setup.sh
src/versavis/firmware/everysync/: everysync.ino
src/versavis/realvis/: CMakeLists.txt  package.xml
src/versavis/realvis/launch/: nodelet_real_start_basler_xsens.launch  real_start.launch  real_start_basler_xsens.launch  run_versavis_copy.launch  run_versavis_md.md  sensor_base.launch  sensor_syncronization.launch  syncronization_2cam_test.launch  syncronization_all_sensors.launch  syncronization_imu_test.launch  vins_start.launch
src/versavis/scripts/: calculate_img_delay.py  real_show_timings.py
src/versavis/versavis/: CMakeLists.txt  package.xml
src/versavis/versavis/launch/: lidar_real_start.launch  real_start.launch  run_versavis.launch  sync_test.md  syncronization_basler_test.launch  test_ext_sensor.launch
src/versavis/versavis/src/: versavis_synchronizer.cpp
(+107 files in other folders)
