<?xml version="1.0"?>
<package format="2">
  <name>every_sync</name>
  <version>0.0.3</version>
  <description>The every_sync package</description>
  <maintainer email="reallab@todo.todo">reallab</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>nodelet</depend>
  <depend>roscpp</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>image_numbered_msgs</depend>
  <depend>imu_numbered_msgs</depend>
  <export>
    <nodelet plugin="${prefix}/nodelet_plugin.xml" />
  </export>
</package>
